feat: support additional disk in upgrade
DATATR-114

Signed-off-by: Jonathan Perchoc <jonathan.perchoc@ovhcloud.com>

--- a/packages/manager/modules/pci/src/projects/project/storages/databases/database/general-information/upgrade-node/upgrade-node.html
+++ b/packages/manager/modules/pci/src/projects/project/storages/databases/database/general-information/upgrade-node/upgrade-node.html
@@ -24,6 +24,7 @@
     data-selected-flavor="$ctrl.selectedFlavor"
     data-user="$ctrl.user"
 ></database-flavors-list>
+
 <div data-ng-if="$ctrl.upgradingFlavor">
     <oui-spinner data-size="s"></oui-spinner>
     <span
@@ -31,6 +32,7 @@
     ></span>
 </div>
 <oui-form-actions
+    class="mb-4"
     data-ng-if="!$ctrl.upgradingFlavor"
     data-submit-text="{{:: 'pci_databases_general_information_upgrade_node_confirm' | translate }}"
     data-cancel-text="{{:: 'pci_databases_general_information_upgrade_node_cancel' | translate }}"
