--- a/packages/manager/modules/pci/src/projects/project/storages/databases/fork/fork.html
+++ b/packages/manager/modules/pci/src/projects/project/storages/databases/fork/fork.html
@@ -81,8 +81,7 @@
         data-current-flavor="$ctrl.current.flavor"
         data-selected-flavor="$ctrl.model.flavor"
         data-user="$ctrl.user"
-        data-on-change="$ctrl.onFlavorSelect()"
-        data-allow-lower-selection="true"
+        data-on-change="$ctrl.onFlavorSelect(selectedFlavor)"
     >
     </database-flavors-list>
 
