feat(dedicated.server): display endoflife information
ref: MANAGER-7544

Signed-off-by: sachinrameshn <sachin.ramesh@ovhcloud.com>

--- a/packages/manager/apps/dedicated/client/app/dedicated/server/installation/gabarit/dedicated-server-installation-gabarit.html
+++ b/packages/manager/apps/dedicated/client/app/dedicated/server/installation/gabarit/dedicated-server-installation-gabarit.html
@@ -103,6 +103,29 @@
                                                 data-ng-click="installation.deleteGabarit = gabarit"
                                                 data-translate="common_delete"
                                             ></button>
+                                            <i
+                                                class="pl-2 fa"
+                                                aria-hidden="true"
+                                                data-ng-class="{
+                                                    'fa-warning' : showEndOfLifeMessage(gabarit.endOfInstall,true),
+                                                    'fa-info-circle' : showEndOfLifeMessage(gabarit.endOfInstall,false),
+                                                }"
+                                                data-oui-tooltip="{{ getEndOfLifeMessage(gabarit) }}"
+                                                data-oui-tooltip-placement="bottom"
+                                            >
+                                            </i>
+                                            <span
+                                                class="text-danger"
+                                                data-ng-if="showEndOfLifeMessage(gabarit.endOfInstall,true)"
+                                                data-ng-bind="gabarit.endOfInstall | date:'mediumDate'"
+                                            >
+                                            </span>
+                                            <span
+                                                class="text-muted"
+                                                data-ng-if="showEndOfLifeMessage(gabarit.endOfInstall,false)"
+                                                data-ng-bind="gabarit.endOfInstall | date:'mediumDate'"
+                                            >
+                                            </span>
                                         </span>
                                     </label>
                                 </div>
