--- a/packages/manager/apps/dedicated/client/app/dedicated/server/installation/ovh/dedicated-server-installation-ovh.html
+++ b/packages/manager/apps/dedicated/client/app/dedicated/server/installation/ovh/dedicated-server-installation-ovh.html
@@ -125,6 +125,29 @@
                                                 data-translate="server_configuration_installation_ovh_step1_hardwareRaid_os_not_supported_short"
                                             >
                                             </span>
+                                            <i
+                                                class="pl-2 fa"
+                                                aria-hidden="true"
+                                                data-ng-class="{
+                                                    'fa-warning' : showEndOfLifeMessage(distribution.endOfInstall,true),
+                                                    'fa-info-circle' : showEndOfLifeMessage(distribution.endOfInstall,false),
+                                                }"
+                                                data-oui-tooltip="{{ getEndOfLifeMessage(distribution)}}"
+                                                data-oui-tooltip-placement="bottom"
+                                            >
+                                            </i>
+                                            <span
+                                                class="text-danger"
+                                                data-ng-if="showEndOfLifeMessage(distribution.endOfInstall,true)"
+                                                data-ng-bind="distribution.endOfInstall | date:'mediumDate'"
+                                            >
+                                            </span>
+                                            <span
+                                                class="text-muted"
+                                                data-ng-if="showEndOfLifeMessage(distribution.endOfInstall,false)"
+                                                data-ng-bind="distribution.endOfInstall | date:'mediumDate'"
+                                            >
+                                            </span>
                                         </span>
                                     </label>
                                 </div>
